--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,6 @@
 version: 2
 updates:
-- package-ecosystem: bundler npm
+- package-ecosystem: bundler
   directory: "/"
   schedule:
     interval: daily
