--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,4 +4,12 @@ updates:
   directory: "/"
   schedule:
     interval: daily
+    
+version: 2
+updates:
+ - package-ecosystem: 'npm'
+   directory: '/'
+   schedule:
+    interval: 'daily'
+    
   open-pull-requests-limit: 10
