--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,9 +7,9 @@ updates:
     
 version: 2
 updates:
- - package-ecosystem: 'npm'
-   directory: '/'
+ - package-ecosystem: npm
+   directory: "/"
    schedule:
-    interval: 'daily'
+    interval: daily
     
   open-pull-requests-limit: 10
