--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,13 @@
 version: 2
 updates:
-- package-ecosystem: bundler
+- package-ecosystem: "bundler"
   directory: "/"
   schedule:
-    interval: daily
+    interval: "daily"
+    
+  - package-ecosystem: "npm"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    
   open-pull-requests-limit: 10
