--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -16,7 +16,7 @@ on:
 jobs:
   test:
 
-    runs-on: ubuntu-20.10
+    runs-on: debian-latest
     strategy:
       matrix:
         ruby-version: ['2.6', '2.7', '3.2']
