--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -16,7 +16,7 @@ on:
 jobs:
   test:
 
-    runs-on: debian-latest
+    runs-on: ubuntu20.10
     strategy:
       matrix:
         ruby-version: ['2.6', '2.7', '3.2']
