--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -16,10 +16,10 @@ on:
 jobs:
   test:
 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['2.6', '2.7', '3.2']
+        ruby-version: ['2.6.6', '2.7.2', '3.0.0']
 
     steps:
     - uses: actions/checkout@v2
