--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install gems
       run: |
         bundle config path vendor/bundle
-        bundle config set without 'default doc job cable storage ujs test db'
-        bundle install --binstubs
+        bundle config set 'default doc job cable storage ujs test db'
+        bundle install
     - name: Run RuboCop
       run: bundle exec rubocop --parallel
