--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Install gems
       run: |
         bundle config path vendor/bundle
-        bundle install && bundle install rubocop
+        bundle install
+        gem install rubocop
     - name: Run RuboCop
       run: bundle exec rubocop --parallel
