--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
         node-version: [15.x]
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
@@ -24,6 +24,6 @@ jobs:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_ACCESS_TOKEN }}
         GITHUB_PAGES_REPO_AUTHOR: pheiduck
         GITHUB_PAGES_REPO_NAME: lab.github.com/githubtraining/introduction-to-github
-        GITHUB_PAGES_RELEASE_BRANCH: master
+        GITHUB_PAGES_RELEASE_BRANCH: main
         PROJECT_BUILD_FOLDER: dist
         GITHUB_PAGES_CLEANUP_SCRIPT: "rm bundle* && rm index.html"
