--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,8 @@ updates:
   directory: "/"
   schedule:
     interval: "daily"
+  allow:
+    - dependency-type: "all"    
 
 - package-ecosystem: "npm"
   directory: "/node_modules/reveal.js/"
