--- a/.github/workflows/dependabotautomerge.yml
+++ b/.github/workflows/dependabotautomerge.yml
@@ -1,29 +1,15 @@
 name: "Dependabot Automerge"
 
-on:
-  schedule:
-    - cron: "0 0 * * *"
-  pull_request:
+on: pull_request
 
 jobs:
-  worker:
+  auto-merge:
+    timeout-minutes: 5
+
     runs-on: ubuntu-latest
 
-    if: github.actor == 'dependabot[bot]'
     steps:
-      - name: automerge
-        uses: actions/github-script@v3.1
+      - uses: actions/checkout@v2.3.4
+      - uses: ahmadnassri/action-dependabot-auto-merge@v2.3.1
         with:
-          script: |
-            github.pullRequests.createReview({
-              owner: context.payload.repository.owner.login,
-              repo: context.payload.repository.name,
-              pull_number: context.payload.pull_request.number,
-              event: 'APPROVE'
-            })
-            github.pullRequests.merge({
-              owner: context.payload.repository.owner.login,
-              repo: context.payload.repository.name,
-              pull_number: context.payload.pull_request.number
-            })
           github-token: ${{secrets.GH_TOKEN_DEPENDABOT}}
