--- a/.github/workflows/dependabotautomerge.yml
+++ b/.github/workflows/dependabotautomerge.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - uses: ahmadnassri/action-dependabot-auto-merge@v2.3.1
         with:
-          github-token: ${{secrets.GH_TOKEN_DEPENDABOT}}
+          github-token: ${{ github.token }}
