--- a/.github/workflows/dependabotautomerge.yml
+++ b/.github/workflows/dependabotautomerge.yml
@@ -1,15 +1,27 @@
-name: "Dependabot Automerge"
+name: "Dependabot Automerge - Action"
 
-on: pull_request
+on:
+  pull_request:
 
 jobs:
-  auto-merge:
-    timeout-minutes: 5
-
+  worker:
     runs-on: ubuntu-latest
 
+    if: github.actor == 'dependabot[bot]'
     steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: ahmadnassri/action-dependabot-auto-merge@v2.3.1
+      - name: automerge
+        uses: actions/github-script@0.2.0
         with:
-          github-token: ${{ github.token }}
+          script: |
+            github.pullRequests.createReview({
+              owner: context.payload.repository.owner.login,
+              repo: context.payload.repository.name,
+              pull_number: context.payload.pull_request.number,
+              event: 'APPROVE'
+            })
+            github.pullRequests.merge({
+              owner: context.payload.repository.owner.login,
+              repo: context.payload.repository.name,
+              pull_number: context.payload.pull_request.number
+            })
+          github-token: ${{github.token}}
