--- a/.github/workflows/dependabotautomerge.yml
+++ b/.github/workflows/dependabotautomerge.yml
@@ -2,15 +2,28 @@ name: "Dependabot Automerge - Action"
 
 on:
   pull_request:
-
+    types:
+      - labeled
+      - unlabeled
+      - synchronize
+      - opened
+      - edited
+      - ready_for_review
+      - reopened
+      - unlocked
+  pull_request_review:
+    types:
+      - submitted
+  check_suite:
+    types:
+      - completed
+  status: {}
 jobs:
-  worker:
+  automerge:
     runs-on: ubuntu-latest
-
-    if: github.actor == 'dependabot[bot]'
     steps:
       - name: automerge
-        uses: pascalgn/automerge-action@v0.13.1
+        uses: "pascalgn/automerge-action@v0.11.0"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           MERGE_LABELS: "automerge,!work in progress"
@@ -22,4 +35,5 @@ jobs:
           UPDATE_LABELS: ""
           UPDATE_METHOD: "rebase"
           UPDATE_RETRIES: "30"
+          UPDATE_RETRY_SLEEP: "60000"
           UPDATE_RETRY_SLEEP: "60000"
